# ceph-automation-suite

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER_USAGE.md  Dockerfile  MACOS_CONTAINER.md  Makefile  README.md  ansible.cfg  ceph-vars.yml.example  container-compose.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
docs/: ANSIBLE_TEST_STRATEGY.md  DEVELOPER_GUIDE.md  README.md  TEST_DESIGN.md  VARIABLES_STRUCTURE.md
docs/configuration/: central-config.md  inventory.md
docs/getting-started/: architecture.md  concepts.md  introduction.md  quick-start.md  real-world-quickstart.md
docs/installation/: ubuntu-noble-support.md
docs/operations/: troubleshooting.md
docs/playbooks/: custom-playbooks.md
docs/reference/: glossary.md  variables.md
docs/troubleshooting/: README.md  ubuntu-24.04-cephadm-installation.md
group_vars/: all.yml
inventory/: hosts-scalable.yml.example
playbooks/00-preparation/: README.md  add-gpg-keys.yml  fix-ubuntu24.yml  prepare-disks.yml  setup-root-ssh.yml
playbooks/01-deployment/: README.md  bootstrap.yml  complete-deployment-docker.yml  complete-deployment.yml  post-bootstrap.yml
playbooks/02-services/: configure-cephfs.yml  configure-global.yml  configure-rbd.yml  configure-rgw.yml  csi-users.yml  rgw-buckets.yml  rgw-objects.yml  rgw-users.yml
playbooks/02-services/playbooks/02-services/: ceph-csi-users-creation-results.txt
playbooks/02-services/tasks/: rgw_bucket_creation.yml  rgw_object_creation.yml  rgw_user_creation.yml
playbooks/03-operations/: ceph-rgw-users-creation-results.csv  create-rbd-snapshot.yml  current-cluster-fsid.txt  list-rbd-images.yml  list-rbd-snapshots.yml  remove-rbd-snapshot.yml  rgw-buckets.yml  rgw-objects.yml  rgw-users.yml  save-fsid.yml  sync-time.yml
playbooks/04-validation/: validate-all.yml  validate-cephfs.yml  validate-cluster-health.yml  validate-csi-users.yml  validate-osd-configuration.yml  validate-rbd-snapshots.yml  validate-rbd.yml  validate-rgw-buckets.yml  validate-rgw.yml
playbooks/90-maintenance/: purge-cluster.yml  undo-configure-cephfs.yml  undo-configure-osd.yml  undo-configure-rbd.yml  undo-configure-rgw.yml
scripts/: bump-version.sh  dev-setup.sh  install-with-uv.sh  macos-container-build.sh  macos-container-run.sh  setup-container-compose.sh  update-version.sh
tests/: conftest.py  run_all_tests.sh
tests/ansible/: test_validate_playbooks.sh
tests/fixtures/: ansible_inventory.yml
tests/integration/: test_makefile.sh
tests/smoke/: quick_check.sh
tests/unit/: test_version.py
tests/unit/test_playbooks/: __init__.py  test_deployment_playbooks.py  test_maintenance_playbooks.py  test_operations_playbooks.py  test_playbook_runner.py  test_preparation_playbooks.py  test_services_playbooks.py  test_syntax.py  test_validation_playbooks.py
